--- a/lib/linguist/languages.yml
+++ b/lib/linguist/languages.yml
@@ -4342,6 +4342,15 @@ Nix:
   tm_scope: source.nix
   ace_mode: nix
   language_id: 252
+ NKPL:
+  type: programming
+  color: "#ff0077"
+  extensions:
+  - ".nkpl"
+  aliases:
+  - nkpl
+  tm_scope: source.nkpl
+  ace_mode: text
 Nu:
   type: programming
   color: "#c9df40"
